fix: word-wrap changes and monospace code
- word-wrap break words to better fit for long URLs
- tables fitting the layout max width

Fixes FND-1194

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -99,8 +99,10 @@ h6 {
 // Source code ===========================================
 // although most of the configuration and syntax highlights comes from addHighlights step
 code {
-  font-size: 16px;
-  border-radius: 5px;
+  border-radius: 3px;
+  color: var(--font-color);
+  background-color: var(--highlight-grey);
+  word-wrap: break-word;
 }
 
 // Internal Hyperlinks ============================================
